# PERColator

./: .gitignore  AI_ASSISTANT_GUIDE.md  ARCHITECTURE_FLOW_COMPLETE.md  CLEAN_CONSOLE.md  CLEAN_REPO_SUMMARY.md  CLI_BACKEND_INTEGRATION.md  CLI_QUICK_START.md  COIN_SPECIFIC_PRICING_FIXED.md  COMPUTE_OPTIMIZATION.md  CROSS_SLAB_FIXES_COMPLETE.md  CROSS_SLAB_MATH_FIXED.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_VERSIONS.md  FRONTEND_BACKEND_CONNECTION.md  FUNDING_STRATEGY_CHANGES.md  INFRASTRUCTURE_ADDED.md  KITCHEN_SINK_TEST.md  LIVE_ORDERBOOK_SETUP.md  ORDERBOOK_FINAL_STATUS.md  ORDERBOOK_SCENARIOS_STATUS.md  ORDERBOOK_TEST_SUCCESS.md  README.md  README_SIMPLE.md  READY_FOR_VIDEO.md  REAL_SLAB_PARSER_COMPLETE.md  RECORD_VIDEO_NOW.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_ENV_VARS.md  RERUN_TESTS.sh  RUN_IN_WSL.md  RUN_ME.ps1  SETUP_FAUCET.md  START_SERVERS.md  TEST_FIXES_SUMMARY.md  TODAY_PLAN.md  TWITTER_THREAD.md  UI_FINISH_PLAN.md  V0_IMPLEMENTATION_STATUS.md  (+29 more)
.cargo/: config.toml
api/: README.md  airdrop-button-example.html  package-lock.json  package.json  setup.sh  test-endpoints.js  test.html
cli/: BUILD_INSTRUCTIONS.md  Cargo.toml  INTERACTIVE_CLI.md  INTERACTIVE_CLI_SUMMARY.md  QUICK_START.md  README.md  RUN_CLI.md  package.json  test_interactive.ps1
cli/src/: amm.rs  client.rs  config.rs  deploy.rs  error.rs  exchange.rs  interactive.rs  keeper.rs  liquidation.rs  liquidity.rs  main.rs  margin.rs  matcher.rs  tests.rs  trading.rs  utils.rs
cli/src/commands/: admin.rs  lp.rs  monitor.rs  portfolio.rs  trade.rs
docs/: CODEX.md  IMPLEMENTATION_SUMMARY.md  KEEPER_LP_LIQUIDATION.md  LP_ADAPTER_CPI_INTEGRATION.md  LP_ADAPTER_IMPLEMENTATION.md  LP_LIQUIDATION_ARCHITECTURE.md  README.md  ROUTER_LP_SUMMARY.md  TEST_ASSERTION_VERIFICATION.md  TEST_INFRASTRUCTURE_FIXES.md  TEST_SCRIPTS_EXECUTION_STATUS.md  VERIFICATION.md  test_implementation_plan.md
frontend/: .eslintrc.json  CUSTOM_CHART_GUIDE.md  next.config.ts  package-lock.json  package.json  render.yaml  tailwind.config.ts
programs/oracle/: Cargo.toml
programs/oracle/src/: entrypoint.rs  lib.rs  state.rs
programs/router/: Cargo.toml
programs/router/src/: authority_proofs.rs  entrypoint.rs  init.rs  lib.rs  lp_adapter_serde.rs  pda.rs
programs/router/src/instructions/: burn_lp_shares.rs  cancel_lp_orders.rs  cap_ops.rs  execute_cross_slab.rs  initialize.rs  initialize_vault.rs  liquidate.rs  liquidate_user.rs  mod.rs  multi_commit.rs  multi_reserve.rs  register_slab.rs  router_liquidity.rs  router_release.rs  router_reserve.rs  router_seat_init.rs  topup_insurance.rs  withdraw.rs  withdraw_insurance.rs
programs/router/src/state/: model_bridge.rs  venue_pnl.rs
programs/slab/: Cargo.toml
programs/slab/src/: adapter.rs  entrypoint.rs  init.rs  lib.rs  pda.rs  tests.rs
programs/slab/src/instructions/: batch_open.rs  cancel_order.rs  commit_fill.rs  liquidate.rs  mod.rs  modify_order.rs  place_order.rs  update_funding.rs
programs/slab/src/matching/: antitoxic.rs  commit.rs  funding.rs  liquidate.rs  mod.rs  reserve.rs
programs/slab/src/state/: header.rs  mod.rs  orderbook.rs  slab.rs
scripts/: MARKET_MAKER_README.md  README.md  add_test_liquidity.js  cancel-all-orders.js  check-programs.ts  check-slab-activity.js  create-simple-slab.ts  create_new_slab.js  create_trading_pairs.ps1  create_vault.js  generate-vanity-custom.ts  init_devnet.ps1  init_oracle.js  init_receipt.js  init_vault.js  initialize-amm-pools.ts  initialize-slab.ts  initialize-user-portfolio.ts  initialize-with-phantom.md  initialize_exchange.ps1  market-maker-bot.js  oracle-keeper.js  package-lock.json  package.json  quick_init_router.js  setup_devnet.ps1  slab-account.json  slab-payer.json  test_order.js  update_oracle.js
src/: client.rs  config.rs  index.ts  percolator.rs  types.rs
test-ledger/: genesis.tar.bz2
test-scripts/: run_all_orderbook_tests.sh  (+7 more)
(+204 files in other folders)
