[package]
name = "percolator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "percolator"
path = "src/percolator.rs"

[dependencies]
pinocchio = { version = "0.9.2", default-features = false }
pinocchio-log = { version = "0.5.1", default-features = false }

[dev-dependencies]
proptest = "1.4"

[features]
default = []
fuzz = []

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
overflow-checks = true

[profile.sbf]
inherits = "release"
panic = "abort"

[workspace.metadata.kani]
flags = { tests = true }
unstable = { stubbing = true }

[[workspace.metadata.kani.proof]]
harness = ".*"
unwind = 70
