[package]
name = "percolator-cli"
version = "0.1.0"
edition = "2021"
authors = ["Percolator Team"]
description = "Command-line interface for PERColator DEX"

[[bin]]
name = "perc"
path = "src/main.rs"

[dependencies]
# Solana
solana-client = "2.1"
solana-sdk = { workspace = true }
solana-program = { workspace = true }

# CLI
clap = { version = "4.5", features = ["derive", "color"] }
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.42", features = ["full"] }
dirs = "5.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Numbers
rust_decimal = "1.36"

[features]
default = []

