[package]
name = "percolator-oracle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
# oracle is a library dependency only, not a standalone BPF program
crate-type = ["lib"]
name = "percolator_oracle"

[dependencies]
pinocchio.workspace = true

[dev-dependencies]
solana-program-test.workspace = true
solana-sdk.workspace = true
tokio.workspace = true

[features]
default = ["bpf-entrypoint"]
bpf-entrypoint = []
test-sbf = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
